# kitchen-timer

./: .gitignore  .gitmodules  README.md  platformio.ini  program.sh
.github/workflows/: platformio.yml  programmer.yml  simulator.yml
PCB_Design/: README.md
docs/: functionality.md
docs/hardware/: block_diagram.md  bom.md  schematic.md
enclosure/: kitchen_timer-base.stl  kitchen_timer-knob.stl  kitchen_timer-top.stl
fritzing/: README.md  schema.fzz
hardware/: #auto_saved_files#  3V3_regulator.kicad_sch  5V_boost_converter.kicad_sch  _autosave-3V3_regulator.kicad_sch  _autosave-led_matrices_drivers.kicad_sch  boost_converter.kicad_sch  fp-info-cache  fp-lib-table  kitchen_timer-hardware.kicad_pcb  kitchen_timer-hardware.kicad_prl  kitchen_timer-hardware.kicad_pro  kitchen_timer-hardware.kicad_sch  kitchen_timer-hardware.kicad_sch-bak  kitchen_timer-symbols_lib.kicad_sym  led_matrices_display.kicad_sch  led_matrices_drivers.kicad_sch  led_matrices_drivers.kicad_sch-bak  microcontroller.kicad_sch  piezo_speaker.kicad_sch  power_management.kicad_sch  rotary_encoder.kicad_sch  sym-lib-table  uart_debugger.kicad_sch  uart_debugger.kicad_sch-bak  ~kitchen_timer-hardware.kicad_sch.lck
hardware/kitchen_timer.pretty/: CH340E_UART_BREAKOUT.kicad_mod  FL26T2-32.000.kicad_mod  FL26T2-32.000.stp  HNB09A05.kicad_mod  JST_XH_1x02_P2.54mm_Vertical.kicad_mod  KWM-20882CUYB.kicad_mod  MMBT3904 (SOT-23).kicad_mod  PEC11R4215FS0024.kicad_mod  PH2-A Connector.kicad_mod  PS1240P02BT.kicad_mod  PS1240P02CT3.step  SAMTEC_SS-108-TT-2.kicad_mod  SMT_4.2X3.2_.kicad_mod  SW_SKRPACE010.kicad_mod  Untitled.kicad_mod  (+4 more)
include/: util.h
pcb/: .gitignore  power_management.kicad_sch  power_requirement_calc.kicad_sch  uart_debugger.kicad_sch
programmer/: binary_protocol.py  intel_hexfile.py  programmer.py  requirements.txt  test_binary_protocol.py  test_intel_hexfile.py
scripts/: melody_parser.py  preview-melodies.py  test_melody_parser.py
simulation/: .gitignore  CMakeLists.txt  Makefile  README.md  functions.cmake
simulation/include/: sim_core_config.h  sim_core_decl.h
simulation/src/: bootloader.cpp  buzzer_virt.c  buzzer_virt.h  graphics.cpp  graphics.h  max7219_virt.c  max7219_virt.h  peripherals.h  simulation.h  simulator.cpp
src/: event_queue.cpp  event_queue.h  led-counter.cpp  led-counter.h  main-arduinoisp.cpp  main-state_machine.cpp  main-timer.cpp  rotary-encoder.cpp  rotary-encoder.h  uint8-queue.cpp  uint8-queue.h
(+169 files in other folders)
